<resources>
    <string name="app_name">TreeScene</string>
    <string name="start_camera">Plant Trees!</string>
    <string name="main_menu_background_image">Main menu background image</string>
    <string name="trees">Trees</string>
    <string name="oak_tree">Oak</string>
    <string name="cherry_blossom">Cherry Blossom</string>
    <string name="palm_tree">Palm</string>
    <string name="pine">Pine</string>
    <string name="elm">Elm</string>
    <string name="trash">Trash</string>
    <string name="help">Help</string>
    <string name="take_picture">Take picture</string>
    <string name="tree_icon">Tree icon</string>
    <string name="tree_type">Tree Type</string>
    <string name="search">search</string>
</resources>
