<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:singleSelection="true"
        app:selectionRequired="true">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/oak"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/oak_tree"
            app:icon="@drawable/ic_oak" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/elm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/elm"
            app:icon="@drawable/ic_elm"/>

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/pine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pine"
            app:icon="@drawable/ic_pine"/>

        <Button
            android:id="@+id/palm"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/palm_tree"
            app:icon="@drawable/ic_palm"/>

        <Button
            android:id="@+id/cherry_blossom"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cherry_blossom"
            app:icon="@drawable/ic_cherry_blossom"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
</HorizontalScrollView>